fixed burgermenu items overlapping on manding page items

--- a/modal.css
+++ b/modal.css
@@ -79,6 +79,41 @@ img {
 }
 
 @media screen and (max-width: 1125px) {
+  .topnav .icon {
+    display: block;
+  }
+
+  .topnav.responsive {
+    position: relative;
+  }
+
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+
+  .topnav a {
+    display: none;
+  }
+
+  .main-navbar {
+    position: fixed;
+    right: 0;
+    background: #fff;
+    z-index: 12;
+    margin-right: 36px;
+    border-radius: 5px;
+  }
+  .topnav.responsive .main-navbar {
+    box-shadow: 0 2px 7px 2px rgba(0, 0, 0, 0.2);
+  }
   .topnav a {
     display: none;
   }
@@ -117,9 +152,6 @@ img {
   .topnav .icon {
     right: 0;
     /* margin-top: 5px; */
-  }
-
-  .main-navbar {
   }
 }
 
